--- a/aftman.toml
+++ b/aftman.toml
@@ -4,5 +4,7 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.5.1"
+selene = "kampfkarren/selene@0.28.0"
+stylua = "johnnymorganz/stylua@2.1.0"
 
 # rojo = "rojo-rbx/rojo@6.2.0"
