--- a/aftman.toml
+++ b/aftman.toml
@@ -7,5 +7,7 @@ rojo = "rojo-rbx/rojo@7.5.1"
 selene = "kampfkarren/selene@0.28.0"
 stylua = "johnnymorganz/stylua@2.1.0"
 rbxcloud = "Sleitnick/rbxcloud@0.17.0"
+wally = "UpliftGames/wally@0.3.2"
+zoneplus = "1ForeverHD/ZonePlus@3.2.0"
 
 # rojo = "rojo-rbx/rojo@6.2.0"
